@startuml

title __USERS's Class Diagram__\n

  namespace com.vale.warehouses {
    namespace ui.users {
      class com.vale.warehouses.ui.users.AddEditUserActivity {
          {static} + USER_ID : String
          - editRatingBar : RatingBar
          - editTextAddress : TextInputLayout
          - editTextEmail : TextInputLayout
          - editTextFee : TextInputLayout
          - editTextFirstName : TextInputLayout
          - editTextLastName : TextInputLayout
          - editTextPassword : TextInputLayout
          - editTextPasswordConfirm : TextInputLayout
          - editTextPhone : TextInputLayout
          - editTextUnique : TextInputLayout
          - editTextUsername : TextInputLayout
          - textViewRating : TextView
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          # onCreate()
          - addOwnerData()
          - addSaleAgentData()
          - addTenantData()
          - addUserDataToUi()
          - buildViewModels()
          - handleOwner()
          - handleSaleAgent()
          - handleTenant()
          - handleUserRelatedData()
          - hideData()
          - saveUser()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.users {
      class com.vale.warehouses.ui.users.RoleMultiSelectionSpinner {
          ~ adapter : ArrayAdapter<String>
          ~ roles : List<Role>
          ~ selection : boolean[]
          - selectedRoles : MutableLiveData<Set<Role>>
          + RoleMultiSelectionSpinner()
          + RoleMultiSelectionSpinner()
          + getSelectedItems()
          + getSelection()
          + onClick()
          + performClick()
          + setAdapter()
          + setRoles()
          + setSelection()
          - buildSelectedItemString()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.users {
      class com.vale.warehouses.ui.users.UserAdapter {
          {static} - DIFF_CALLBACK : ItemCallback<User>
          + UserAdapter()
          + getUserAt()
          + onBindViewHolder()
          + onCreateViewHolder()
          + setOnItemClickListener()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.users {
      interface com.vale.warehouses.ui.users.UserAdapter.OnItemClickListener {
          {abstract} + onItemClick()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.users {
      class com.vale.warehouses.ui.users.UserAdapter.UserHolder {
          - textViewEmail : TextView
          - textViewFullName : TextView
          - textViewUserName : TextView
          + UserHolder()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.users {
      class com.vale.warehouses.ui.users.UserListActivity {
          {static} + ADD_REQUEST : int
          {static} + EDIT_REQUEST : int
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          # onActivityResult()
          # onCreate()
          - getAllUsers()
          - logoutNow()
      }
    }
  }
  

  com.vale.warehouses.ui.users.AddEditUserActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.vale.warehouses.ui.users.AddEditUserActivity o-- com.vale.warehouses.ui.users.RoleMultiSelectionSpinner : roleSpinner
  com.vale.warehouses.ui.users.AddEditUserActivity o-- com.vale.warehouses.service.view_model.RoleViewModel : roleViewModel
  com.vale.warehouses.ui.users.AddEditUserActivity o-- com.vale.warehouses.service.model.User : user
  com.vale.warehouses.ui.users.AddEditUserActivity o-- com.vale.warehouses.service.view_model.UserViewModel : userViewModel
  com.vale.warehouses.ui.users.RoleMultiSelectionSpinner .up.|> android.content.DialogInterface.OnMultiChoiceClickListener
  com.vale.warehouses.ui.users.RoleMultiSelectionSpinner -up-|> androidx.appcompat.widget.AppCompatSpinner
  com.vale.warehouses.ui.users.UserAdapter -up-|> androidx.recyclerview.widget.ListAdapter
  com.vale.warehouses.ui.users.UserAdapter o-- com.vale.warehouses.ui.users.UserAdapter.OnItemClickListener : listener
  com.vale.warehouses.ui.users.UserAdapter +-down- com.vale.warehouses.ui.users.UserAdapter.OnItemClickListener
  com.vale.warehouses.ui.users.UserAdapter +-down- com.vale.warehouses.ui.users.UserAdapter.UserHolder
  com.vale.warehouses.ui.users.UserAdapter.UserHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.vale.warehouses.ui.users.UserListActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.vale.warehouses.ui.users.UserListActivity o-- com.vale.warehouses.ui.users.UserAdapter : userAdapter
  com.vale.warehouses.ui.users.UserListActivity o-- com.vale.warehouses.service.view_model.UserViewModel : userViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
